# maestro

./: .eslintrc.js  .flake8  .gitignore  Procfile  README.md  docker-compose.yml  init-letsencrypt  manage.py  nuxt.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: routers.py  urls.py
apps/api/: pagination.py  urls.py
apps/authentication/: serializers.py  urls.py  views.py
apps/customer/: admin.py  filters.py  models.py  serializers.py  tests.py  viewsets.py
apps/flat/: admin.py  apps.py  models.py  serializers.py  viewsets.py
apps/invoice/: admin.py  filters.py  models.py  serializers.py  services.py  storage_backends.py  test.py  views.py  viewsets.py
apps/report/: admin.py  filters.py  models.py  serializers.py  tests.py  (+1 more)
assets/: main.css
authentication/: serializers.py  urls.py  views.py
components/: AddButton.vue  Form.vue  Notification.vue  ServerSideIterator.vue
customer/: admin.py  models.py  serializers.py  viewsets.py
flat/: admin.py  models.py  serializers.py  viewsets.py
frontend/: rrule-helpers.js
invoice/: admin.py  filters.py  jinja2.py  models.py  serializers.py  services.py  viewsets.py
layouts/: default.vue  error.vue
maestro/: settings.py  testing.py  urls.py  wsgi.py
middleware/: running-report.js
pages/: index.vue
plugins/: config.js  filters.js  http.js  luxon.js  notification.js  report.js  rules.js  swiped-events.js
report/: admin.py  filters.py  models.py  serializers.py  tests.py  viewsets.py
store/: calendar.js  notification.js  report.js
task/: admin.py  models.py  serializers.py  viewsets.py
(+273 files in other folders)
